--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="working_days">Working days</string>
     <string name="export">Export</string>
     <string name="settings">Settings</string>
+    <string name="attention">Attention!</string>
+    <string name="deleteConfirmation">Are you sure you want to delete?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
