working on editing students save point, update app destinations

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,7 +4,7 @@
     <string name="calendar">Календарь</string>
     <string name="students">Студенты</string>
     <string name="markers">Маркеры</string>
-    <string name="working_days">Рабочие дни</string>
+    <string name="schedule">Расписание недели</string>
     <string name="export">Экспорт</string>
     <string name="settings">Настройки</string>
     <string name="attention">Внимание!</string>
