--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="calendar">Calendar</string>
     <string name="students">Students</string>
     <string name="markers">Markers</string>
-    <string name="working_days">Working days</string>
+    <string name="schedule">Schedule</string>
     <string name="export">Export</string>
     <string name="settings">Settings</string>
     <string name="attention">Attention!</string>
