--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,4 +15,8 @@
     <string name="edit_marker">Изменение маркера</string>
     <string name="add">Добавить</string>
     <string name="save_changes">Сохранить изменения</string>
+    <string name="name">Имя</string>
+    <string name="surname">Фамилия</string>
+    <string name="patronymic">Отчество</string>
+    <string name="marker">Маркер</string>
 </resources>
