--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="edit_marker">Marker Editor</string>
     <string name="add">Add</string>
     <string name="save_changes">Save changes</string>
+    <string name="name">Name</string>
+    <string name="surname">Surname</string>
+    <string name="patronymic">Patronymic</string>
+    <string name="marker">Marker</string>
 </resources>
