--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -19,4 +19,5 @@
     <string name="surname">Фамилия</string>
     <string name="patronymic">Отчество</string>
     <string name="marker">Маркер</string>
+    <string name="pair">Пара</string>
 </resources>
