--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <string name="export_to">Export to</string>
     <string name="format">Format</string>
     <string name="export_settings">Export settings</string>
+    <string name="cource">Cource</string>
+    <string name="your_name">Your name</string>
+    <string name="group">Group</string>
+    <string name="semester">Semester</string>
 </resources>
