--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="your_name">Your name</string>
     <string name="group">Group</string>
     <string name="semester">Semester</string>
+    <string name="select_type">Select type</string>
 </resources>
