--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,8 +11,8 @@
     <string name="deleteConfirmation">Вы уверены, что хотите удалить?</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
-    <string name="edit_student">Изменение студента</string>
-    <string name="edit_marker">Изменение маркера</string>
+    <string name="edit_student">Редактор Студентов</string>
+    <string name="edit_marker">Редактор Маркеров</string>
     <string name="add">Добавить</string>
     <string name="save_changes">Сохранить изменения</string>
     <string name="name">Имя</string>
