update EditMarker screen layout

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -32,4 +32,5 @@
     <string name="select_day_type">Выберите тип дня</string>
     <string name="holiday">Выходной</string>
     <string name="weekday">Рабочий</string>
+    <string name="attendance">Посещаемость</string>
 </resources>
